@@ -1,3 +1,11 @@
+2008-01-28  Sven Neumann  <sven@gimp.org>
+
+	Merged from trunk:
+
+	* plug-ins/common/lcms.c (lcms_dialog): fixed crash on missing
+	profile (bug #512529).
+	(lcms_load_profile): fixed error messages.
+
 2008-01-27  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/gimpressionist/gimp.c: use a tile cache for better
